--- a/app/Resources/views/user/coleccion.html.twig
+++ b/app/Resources/views/user/coleccion.html.twig
@@ -32,13 +32,15 @@
     {% endblock %}
 
     {% block listaDecks %}
-        <div id="lista_decks">
-            <h1>Equipo</h1>
-            <ul>
+        <div id="cont_lista_decks">
+           <h3>Equipos</h3>
+            <ul class="lista_decks">
                 {% for escuadron in usuario.decks %}
                     <li class="deck"><a href="{{ path('deck_editar', {'deck': escuadron.id, 'id': usuario.id}) }}"><i class="fa fa-biohazard"></i>{{ escuadron.deckname }}</a></li>
                 {% endfor %}
-                <li><a href="{{ path('deck_nuevo', {'id': usuario.id}) }}"><i class="fa fa-smoking-ban"></i> Nuevo Escuadrón</a></li>
+                <form action="{{ path('deck_nuevo', {'id': usuario.id}) }}">
+                    <li><button class="btn-outline-primary" type="submit"><i class="fa fa-plus"></i> Nuevo Escuadrón</button></li>
+                </form>
             </ul>
         </div>
     {% endblock %}
