--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -49,6 +49,18 @@
             </div>
         </nav>
     {% endblock %}
+    {% for mensaje in app.session.flashbag.get('exito') %}
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ mensaje }}
+        </div>
+    {% endfor %}
+    {% for mensaje in app.session.flashbag.get('error') %}
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ mensaje }}
+        </div>
+    {% endfor %}
 
     <div class="container">
         {% block contenidoExt %}
