--- a/app/Resources/views/user/eliminar.html.twig
+++ b/app/Resources/views/user/eliminar.html.twig
@@ -9,7 +9,7 @@
     </div>
 
     <form method="post">
-        <a href="{{ path('usuario_perfil')}}"></a>
+        <a href="{{  path('usuario_perfil')}}">Cancelar</a>
         <button type="submit" class="btn btn-outline-danger" name="borrar"><i class="fa fa-trash-o">Borrar</i></button>
     </form>
 {% endblock %}
