--- a/app/Resources/views/user/list.html.twig
+++ b/app/Resources/views/user/list.html.twig
@@ -2,7 +2,7 @@
 
 {% block contenidoExt %}
 
-    <div id="fondo_ranking" style="width:105%;height: 100%; position: absolute;left: -5%; ;background: url("{{ asset('recursos/fondos/fondo_ranking.jpg') }}")">
+    <div id="fondo_ranking" >
     <h1>CyberLords</h1>
     <table class="table" style="overflow-x: scroll;background: url('{{ asset('recursos/fondos/fondo_ranking.jpg') }}')">
         <thead>
