--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -1,6 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <div class="container">
+        {% for mensaje in app.session.flashbag.get('exito') %}
+            <div class="alert alert-success alert-dismissible">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                {{ mensaje }}
+            </div>
+        {% endfor %}
+        {% for mensaje in app.session.flashbag.get('error') %}
+            <div class="alert alert-success alert-dismissible">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                {{ mensaje }}
+            </div>
+        {% endfor %}
     {% block nav %}
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <a class="navbar-brand" href="{{ path('portada') }}"> CyberTrap TCG</a>
@@ -11,27 +24,33 @@
                 {% set ruta = app.request.get('_route') %}
                 <ul class="navbar-nav mr-auto">
 
-                    {% if is_granted('ROLE_PLAYER') %}
-                    <li class="nav-item {% if ruta starts with "" %} active{% endif %}">
-        {#                    <a class="nav-link" href="{{ path('coleccion', {'id':app.user.id}) }}"><i class="fas -solar-panel fa-solar-panel"></i>Colección</a>#}
-                    </li>
-                    {% endif %}
-                    <li class="nav-item{% if ruta starts with "user_" %} active{% endif %}">
-                        <a class="nav-link" href="{{ path('user_list') }}"><i class="fas -jedi fa-jedi"></i> Ranking</a>
-                    </li>
+                   {% if is_granted('ROLE_ADMIN') %}
+                       <li class="nav-item ">
+                           <a class="nav-link" href="{{ path('admin_panel') }}"><i class="fas fa-cog"></i> Admin Panel</a>
+                       </li>
+                    {% else %}
                     <li class="nav-item{% if ruta == "portada" %} active{% endif %}">
                         <a class="nav-link" href="{{ path('portada') }}"><i class="fas fa-vihara"></i> Night City<span class="sr-only">(actual)</span></a>
                     </li>
+                    <li class="nav-item{% if ruta starts with "user_" %} active{% endif %}">
+                        <a class="nav-link" href="{{ path('user_list') }}"><i class="fas -jedi fa-jedi"></i> Ranking</a>
+                    </li>
 
-
-
-                    {% if is_granted('ROLE_PLAYER') %}
-                        {% else %}
-                            <li class="nav-item {% if ruta starts with "card_" %} active{% endif %}">
-                                <a class="nav-link" href="{{ path('card_list') }}"><i class="fas -solar-panel fa-solar-panel"></i> Personajes</a>
-                            </li>
-
+                       {% if is_granted('ROLE_PLAYER') %}
+                           {% else %}
+                               <li class="nav-item {% if ruta starts with "card_" %} active{% endif %}">
+                                   <a class="nav-link" href="{{ path('card_list') }}"><i class="fas -solar-panel fa-solar-panel"></i> Personajes</a>
+                               </li>
+                            {% endif %}
                     {% endif %}
+
+
+
+
+
+
+
+
 
                 </ul>
                 {% if app.user %}
@@ -49,20 +68,9 @@
             </div>
         </nav>
     {% endblock %}
-    {% for mensaje in app.session.flashbag.get('exito') %}
-        <div class="alert alert-success alert-dismissible">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ mensaje }}
-        </div>
-    {% endfor %}
-    {% for mensaje in app.session.flashbag.get('error') %}
-        <div class="alert alert-success alert-dismissible">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ mensaje }}
-        </div>
-    {% endfor %}
 
-    <div class="container">
+
+
         {% block contenidoExt %}
         {% endblock %}
 
