--- a/app/Resources/views/market/formComprarCartas.html.twig
+++ b/app/Resources/views/market/formComprarCartas.html.twig
@@ -1,17 +1,16 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-
-    <div id="fondo_comprar_carta" style="background: url({{ asset('recursos/fondos/fondo_tienda2.jpg') }}">
+{% set precio = 'X' %}
+    <div id="fondo_comprar_carta" class="alert alert-dark">
+        <p>¿Estás seguro de que quieres comprar una carta aleatoria por {{ precio }} créditos?</p>
         <form action="{{ path('carta_comprar_una',{'id':usuario.id} ) }}" method="post">
-            <p><button type="submit" name="one" class="btn btn-outline-primary">Adquirir carta</button></p>
+            <p><button type="submit" name="one" class="btn btn-outline-primary">Sí</button>
+                <a href="{{ path('tienda', {'id': usuario.id}) }}" class="btn btn-outline-danger">No</a>
+            </p>
+
 
         </form>
-        <form action="{{ path('carta_comprar_pack',{'id':usuario.id} ) }}" method="post">
-            <p><button type="submit" name="one" class="btn btn-outline-primary">Adquirir pack</button></p>
-
-        </form>
-
     </div>
 
 {% endblock %}
