--- a/app/Resources/views/typeCard/listaAdmin.html.twig
+++ b/app/Resources/views/typeCard/listaAdmin.html.twig
@@ -2,17 +2,17 @@
 
 {% block contenidoExt %}
 
-    <div id="fondo_ranking" >
+    <div class="panel_fondo_transparente" >
         <h1>Cartas</h1>
         <table class="table" >
             <thead>
             <tr>
                 <th class="letra_listas_cabecera">ID</th>
                 <th class="letra_listas_cabecera">Nombre</th>
-                <th class="letra_listas_cabecera"><i class="fas -dumbbell fa-dumbbell"></i>Ataque</th>
-                <th class="letra_listas_cabecera"><i class="fas -ethereum fa-ethereum"></i>Inteligencia</th>
-                <th class="letra_listas_cabecera"><i class="fas fa-yen-sign -yen-sign"></i>Defensa</th>
-                <th class="letra_listas_cabecera"><i class="fas fa-yen-sign -yen-sign"></i>Velocidad</th>
+                <th class="letra_listas_cabecera"><i class="fas -dumbbell fa-dumbbell"></i>Fuerza</th>
+                <th class="letra_listas_cabecera"><i class="fas fa-microchip"></i>Hacking</th>
+                <th class="letra_listas_cabecera"><i class="fas fa-biohazard"></i>Bioshock</th>
+                <th class="letra_listas_cabecera"><i class="fas fa-running"></i>Agilidad</th>
 
             </tr>
             </thead>
