--- a/app/Resources/views/user/adminMenu.html.twig
+++ b/app/Resources/views/user/adminMenu.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <div id="panel_admin">
+    <div id="panel_admin" class="panel_fondo_transparente">
         <ul class="lista_admin">
             <li><a href="{{ path('user_list') }}" class="opcion_admin">Mostrar todos los usuarios</a></li>
             <li><a href=""  class="opcion_admin">Solicitudes de borrado</a></li>
