--- a/web/css/main.css
+++ b/web/css/main.css
@@ -22,8 +22,10 @@ a { color: chartreuse; transition: all ease 0.5s; -moz-transition: all ease 0.5s
 /*///////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////*/
 /*MIS CLASES*/
-#panel_admin{
-  background-color: rgba(100,100,100,0.3);
+
+.panel_fondo_transparente{
+  background-color: rgba(3,3,3,0.9);
+  border: 1vw outset #17a2b8;
 }
 
 #cont_tabla_cartas{
@@ -34,23 +36,24 @@ a { color: chartreuse; transition: all ease 0.5s; -moz-transition: all ease 0.5s
 .tabla_cartas{
   margin-bottom:1.4em;
   display: block;
+  max-width: 65%;
+  margin:auto;
 }
 #cont_lista_decks{
-  background-color: rgba(200,200,200,0.2);
+  /*background-color: rgba(200,200,200,0.2);*/
   flex-direction: column;
   display:table-cell;
 }
+
 .lista_decks{
   margin-top: 0;
 }
+
 /*<li> */
 .deck{
   padding-bottom: 4vh;
 }
-/*en el fondo no va la imagen */
-#fondo_ranking{
-  background-color: rgba(100,100,100,0.5);
-}
+
 
 .carta_activa{-webkit-filter:grayscale(0);filter:grayscale(0); }
 .carta_inactiva{-webkit-filter:grayscale(100%);filter:grayscale(100%);cursor:default; }
@@ -319,8 +322,8 @@ body {
 
 .menu_jugador_opcion{
   flex-basis: 30%;
-  background: url(http://78.media.tumblr.com/1704bfe2f37d151ecb62a30b714f1b8a/tumblr_o0i7d582pQ1rnbw6mo1_540.gif);
-  background-size: 10vw;
+  /*background: url(http://78.media.tumblr.com/1704bfe2f37d151ecb62a30b714f1b8a/tumblr_o0i7d582pQ1rnbw6mo1_540.gif);*/
+  /*background-size: 10vw;*/
   height: 10vh;
 
 }
@@ -331,13 +334,11 @@ body {
   flex-basis: 40%;
   height: 10vh;
   max-width: 30vw;
-  /*background-color: yellow;*/
+  background-color: rgba(10,10,10,0.5);
   text-align: center;
 }
 
-.producto{
 
-}
 
 /*FIN INTERFAZ USUARIO*/
 /*///////////////////////////////////////////////////////////////////////
