--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -2,20 +2,10 @@
 
 {% block body %}
     <div class="container">
-        {% for mensaje in app.session.flashbag.get('exito') %}
-            <div class="alert alert-success alert-dismissible">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
-                {{ mensaje }}
-            </div>
-        {% endfor %}
-        {% for mensaje in app.session.flashbag.get('error') %}
-            <div class="alert alert-success alert-dismissible">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
-                {{ mensaje }}
-            </div>
-        {% endfor %}
+
+
     {% block nav %}
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark elnav">
             <a class="navbar-brand" href="{{ path('portada') }}"> CyberTrap TCG</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Mostrar secciones">
                 <span class="navbar-toggler-icon"></span>
@@ -43,16 +33,8 @@
                                </li>
                             {% endif %}
                     {% endif %}
-
-
-
-
-
-
-
-
-
                 </ul>
+
                 {% if app.user %}
                 <span class="navbar-light">!Hola,<a href="{{ path('usuario_perfil') }}">{{ app.user.nickname }}</a>! </span>
                     <a href="{{ path('usuario_salir') }}" class="ml-3 btn btn-outline-primary"><i class="fas fa-times"></i> EXIT</a>
@@ -66,8 +48,21 @@
                     {% endif %}
                 {% endif %}
             </div>
+
         </nav>
-    {% endblock %}
+        {% for mensaje in app.session.flashbag.get('exito') %}
+            <div class="alert alert-success alert-dismissible">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                {{ mensaje }}
+            </div>
+        {% endfor %}
+        {% for mensaje in app.session.flashbag.get('error') %}
+            <div class="alert alert-success alert-dismissible">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                {{ mensaje }}
+            </div>
+        {% endfor %}
+    {% endblock %} {#NAV#}
 
 
 
@@ -75,5 +70,13 @@
         {% endblock %}
 
         {% block content %}{% endblock %}
-    </div>
+    </div> {#container#}
+
+
+    <style>
+        .elnav{
+            background: url("{{ asset('recursos/fondos/foto_cp3.jpg') }}");
+            border-bottom:1vh outset #0d0f15;
+        }
+    </style>
 {% endblock %}
