--- a/app/Resources/views/user/personal_clave.html.twig
+++ b/app/Resources/views/user/personal_clave.html.twig
@@ -1,6 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
+ <div class="panel_fondo_transparente">
    <h1>Cambiar Contraseña</h1>
 
     {{ form_start(form) }}
@@ -8,5 +9,5 @@
     <a href="{{ path('usuario_perfil') }}" class="btn btn-info"><i class="fas fa-arrow-circle-o-left"></i>Volver</a>
     <button type="submit" class="btn btn-outline-primary"><i class="fas fa-check"></i>Cambiar contraseña</button>
     {{ form_end(form) }}
-
+ </div>
 {% endblock %}
