--- a/app/Resources/views/user/registro.html.twig
+++ b/app/Resources/views/user/registro.html.twig
@@ -2,7 +2,7 @@
 
 {% block contenidoExt %}
     <script src="{{ asset('js/login.js') }}"></script>
-    <div class="contenedor_form_login_cp" style="background: url('{{ asset('recursos/fondos/fondo_login.png') }}')">
+    <div class="contenedor_form_login_cp" style="background: url('{{ asset('recursos/fondos/fondo_login3.jpg') }}')">
 
         <form class="form_login_cp"action="{{ path('usuario_nuevo') }}" method="post">
             <div class="form_image_login_cp"></div>
