--- a/web/css/main.css
+++ b/web/css/main.css
@@ -9,7 +9,7 @@
 *{
   font-family: "Roboto Mono";
   list-style-type: none !important;
-
+  color: white;
 }
 body{
 
@@ -34,10 +34,9 @@ a { color: chartreuse; transition: all ease 0.5s; -moz-transition: all ease 0.5s
 }
 
 .tabla_cartas{
-  margin-bottom:1.4em;
   display: block;
   max-width: 65%;
-  margin:auto;
+  margin: auto;
 }
 #cont_lista_decks{
   /*background-color: rgba(200,200,200,0.2);*/
@@ -213,7 +212,7 @@ body {
   font-size: 16px;
 }
 .input_element_cp:focus {
-  box-shadow: inset 0 -2px 0 0 #fdee06;
+  box-shadow: inset 0 -2px 0 0 rgba(144,14,50,0.8);
   outline: none;
 }
 
@@ -235,7 +234,7 @@ body {
 }
 
 .button_cp {
-  background: #fdee06;
+  background: rgba(144,14,50,0.8);
   border: 0;
   padding: 0;
   margin: 0;
@@ -319,6 +318,13 @@ body {
   justify-content: space-between;
 }
 
+#menu_tienda{
+  display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: space-between;
+
+}
+
 
 .menu_jugador_opcion{
   flex-basis: 30%;
@@ -328,7 +334,6 @@ body {
 
 }
 
-/* TIENDA comparte el div superior #menu_jugador*/
 
 .elemento_menu_tienda{
   flex-basis: 40%;
@@ -378,67 +383,67 @@ body {
 /*CSS AUXILIAR*/
 
 /*primer bloque de contenido*/
-#cyberpunk {
-  display: table-cell;
-  width: 250px; height: 250px;
-  background: url(http://78.media.tumblr.com/1704bfe2f37d151ecb62a30b714f1b8a/tumblr_o0i7d582pQ1rnbw6mo1_540.gif) center bottom;
-  background-size: 400px;
-}
-#cont_title{
-  background:rgba(2,11,28,0.5);
-  width: 250px; height: 250px;
-  padding: 50px;
-}
-#cont_title_inner{
-  display: table-cell;
-  height: 246px; width: 250px;
-  font-family: "Roboto Mono", sans-serif; font-size: 6pt; color: #f3f3f3;
-  text-align: center; vertical-align: middle;
-  letter-spacing: 3px;
-  background: rgba(30,34,44,0.65);
-  border: 2px solid #f3f3f3;
-}
-#cont_title_inner h1 {
-  text-transform: uppercase;
-  font-size: 30pt; font-weight: 700; font-style: italic; color: #4f6a7d;
-  letter-spacing: 0px;
-  margin: 0; padding: 0;
-}
+/*#cyberpunk {*/
+/*  display: table-cell;*/
+/*  width: 250px; height: 250px;*/
+/*  background: url(http://78.media.tumblr.com/1704bfe2f37d151ecb62a30b714f1b8a/tumblr_o0i7d582pQ1rnbw6mo1_540.gif) center bottom;*/
+/*  background-size: 400px;*/
+/*}*/
+/*#cont_title{*/
+/*  background:rgba(2,11,28,0.5);*/
+/*  width: 250px; height: 250px;*/
+/*  padding: 50px;*/
+/*}*/
+/*#cont_title_inner{*/
+/*  display: table-cell;*/
+/*  height: 246px; width: 250px;*/
+/*  font-family: "Roboto Mono", sans-serif; font-size: 6pt; color: #f3f3f3;*/
+/*  text-align: center; vertical-align: middle;*/
+/*  letter-spacing: 3px;*/
+/*  background: rgba(30,34,44,0.65);*/
+/*  border: 2px solid #f3f3f3;*/
+/*}*/
+/*#cont_title_inner h1 {*/
+/*  text-transform: uppercase;*/
+/*  font-size: 30pt; font-weight: 700; font-style: italic; color: #4f6a7d;*/
+/*  letter-spacing: 0px;*/
+/*  margin: 0; padding: 0;*/
+/*}*/
 
 
-/*2º bloque de contenido*/
-#replicant { display: table-cell; vertical-align: middle; background: rgba(12, 15, 22,0.75); padding: 30px; }
+/*!*2º bloque de contenido*!*/
+/*#replicant { display: table-cell; vertical-align: middle; background: rgba(12, 15, 22,0.75); padding: 30px; }*/
 
-.synopsis { width: 220px; height: 120px; overflow-y: scroll; background-color: #171a21; border: 20px solid #171a21; font-family: "Roboto Mono"; color: #bbb; font-size: 7pt; padding-right: 10px; }
-.synopsis p { padding: 0; margin: 0; text-align: justify; line-height: 150%; }
-.synopsis p b { text-transform: uppercase; color: #4f6a7d; letter-spacing: 1px; }
+/*.synopsis { width: 220px; height: 120px; overflow-y: scroll; background-color: #171a21; border: 20px solid #171a21; font-family: "Roboto Mono"; color: #bbb; font-size: 7pt; padding-right: 10px; }*/
+/*.synopsis p { padding: 0; margin: 0; text-align: justify; line-height: 150%; }*/
+/*.synopsis p b { text-transform: uppercase; color: #4f6a7d; letter-spacing: 1px; }*/
 
-.weather { margin-top: 20px; width: 230px; border: 20px solid #171a21; background: url(https://78.media.tumblr.com/e5352f3a3e22d36e9d359320f1bc97a8/tumblr_mwjmcxUEoh1qztgoio1_500.gif) center; background-size: 280px; height: 60px; overflow: hidden; }
-.weather-screen { background:rgba(30,34,44,0.75); height: 60px; }
-.weather-screen b { font-family: "a-otf-midashi-mi-ma31-pr6n"; color: red; font-size: 47pt; line-height: 70px; font-weight: bold; letter-spacing: -3px; opacity:0.55;-moz-opacity:0.55; }
-.weather-tag { font-family: "Roboto Mono"; font-size:6pt; color: #f3f3f3; font-weight: 600; letter-spacing: 3px; position: relative; display: block; float: right; top: -40px; right: 10px; }
-.weather-tag b { font-size: 12pt; line-height: 12pt; color: #fff; letter-spacing: 1px; font-weight: 400; margin-left: -1px; }
+/*.weather { margin-top: 20px; width: 230px; border: 20px solid #171a21; background: url(https://78.media.tumblr.com/e5352f3a3e22d36e9d359320f1bc97a8/tumblr_mwjmcxUEoh1qztgoio1_500.gif) center; background-size: 280px; height: 60px; overflow: hidden; }*/
+/*.weather-screen { background:rgba(30,34,44,0.75); height: 60px; }*/
+/*.weather-screen b { font-family: "a-otf-midashi-mi-ma31-pr6n"; color: red; font-size: 47pt; line-height: 70px; font-weight: bold; letter-spacing: -3px; opacity:0.55;-moz-opacity:0.55; }*/
+/*.weather-tag { font-family: "Roboto Mono"; font-size:6pt; color: #f3f3f3; font-weight: 600; letter-spacing: 3px; position: relative; display: block; float: right; top: -40px; right: 10px; }*/
+/*.weather-tag b { font-size: 12pt; line-height: 12pt; color: #fff; letter-spacing: 1px; font-weight: 400; margin-left: -1px; }*/
 
-/* 3er bloque de contenido*/
-#automata { display: table-cell; vertical-align: middle; background: rgba(255,255,255,0); padding: 30px; width: 260px; }
+/*!* 3er bloque de contenido*!*/
+/*#automata { display: table-cell; vertical-align: middle; background: rgba(255,255,255,0); padding: 30px; width: 260px; }*/
 
-.staff { display: block; text-align: center; }
-.staff-ic-frame { border: 2px solid #242935; padding: 4px; width: 45px; height: 45px; display: inline-block; margin-right: 5px;
-  background: rgba(22,43,79,0.5); transition: all ease 1s;
-}
-.staff-ic-frame:last-child { margin-right: 0px; }
-.staff-icon { font-family: "a-otf-midashi-mi-ma31-pr6n"; width: 45px; height: 45px; background: #0d0f15; background-size: 45px 45px; color: #fff; font-size: 15pt; line-height: 45px; text-shadow: 0px 0px 7px black; transition: all ease 0.5s; -moz-transition: all ease 0.3s; font-weight: bold; }
-.staff-icon:hover{background: rgba(22,43,79,0.05);}
-/* .staff-icon:hover { text-shadow: 0px 0px 0px transparent; color: rgba(255,255,255,0); opacity: 0.35; -moz-opacity: 0.35; } */
+/*.staff { display: block; text-align: center; }*/
+/*.staff-ic-frame { border: 2px solid #242935; padding: 4px; width: 45px; height: 45px; display: inline-block; margin-right: 5px;*/
+/*  background: rgba(22,43,79,0.5); transition: all ease 1s;*/
+/*}*/
+/*.staff-ic-frame:last-child { margin-right: 0px; }*/
+/*.staff-icon { font-family: "a-otf-midashi-mi-ma31-pr6n"; width: 45px; height: 45px; background: #0d0f15; background-size: 45px 45px; color: #fff; font-size: 15pt; line-height: 45px; text-shadow: 0px 0px 7px black; transition: all ease 0.5s; -moz-transition: all ease 0.3s; font-weight: bold; }*/
+/*.staff-icon:hover{background: rgba(22,43,79,0.05);}*/
+/*!* .staff-icon:hover { text-shadow: 0px 0px 0px transparent; color: rgba(255,255,255,0); opacity: 0.35; -moz-opacity: 0.35; } *!*/
 
-.ratio { width: 260px; margin: 20px 0px; transition: all ease 1s; -moz-transition: all ease 1s; }
-.ratio h1 { font-family: "Roboto Mono"; color: #f3f3f3; margin: 0; padding: 0; text-transform: lowercase; border: 2px solid #bbb; font-weight: 400; font-size: 11pt; margin: 8px 0px; padding: 3px 20px; width: 70px; text-align: center; }
+/*.ratio { width: 260px; margin: 20px 0px; transition: all ease 1s; -moz-transition: all ease 1s; }*/
+/*.ratio h1 { font-family: "Roboto Mono"; color: #f3f3f3; margin: 0; padding: 0; text-transform: lowercase; border: 2px solid #bbb; font-weight: 400; font-size: 11pt; margin: 8px 0px; padding: 3px 20px; width: 70px; text-align: center; }*/
 
-.ratio-hyp, .ratio-sel, .ratio-ast, .ratio-pro, .ratio-out { box-sizing: border-box;-moz-box-sizing: border-box; -webkit-box-sizing: border-box; margin: 0px -4px 0px 0px; height: 45px; display: inline-block; transition: all ease 1s; -moz-transition: all ease 1s; opacity: 0.75; -moz-opacity: 0.75; }
-.ratio-hyp:hover, .ratio-sel:hover, .ratio-ast:hover, .ratio-pro:hover, .ratio-out:hover { transition: all ease 1s; -moz-transition: all ease 1s; opacity: 1; -moz-opacity: 1; }
+/*.ratio-hyp, .ratio-sel, .ratio-ast, .ratio-pro, .ratio-out { box-sizing: border-box;-moz-box-sizing: border-box; -webkit-box-sizing: border-box; margin: 0px -4px 0px 0px; height: 45px; display: inline-block; transition: all ease 1s; -moz-transition: all ease 1s; opacity: 0.75; -moz-opacity: 0.75; }*/
+/*.ratio-hyp:hover, .ratio-sel:hover, .ratio-ast:hover, .ratio-pro:hover, .ratio-out:hover { transition: all ease 1s; -moz-transition: all ease 1s; opacity: 1; -moz-opacity: 1; }*/
 
 
-#cont_updates { border: 20px solid #0d0f15; background: #0d0f15; height: 40px; overflow: hidden; }
-#cont_updates_inner { font-family: "Roboto Mono"; font-size: 7pt; color: #bbb; height: 40px; text-align: justify;}
-#cont_updates_inner ul li b { color: #586c8e; }
-#cont_updates_inner ul li { border-bottom: 10px solid #111419; }
+/*#cont_updates { border: 20px solid #0d0f15; background: #0d0f15; height: 40px; overflow: hidden; }*/
+/*#cont_updates_inner { font-family: "Roboto Mono"; font-size: 7pt; color: #bbb; height: 40px; text-align: justify;}*/
+/*#cont_updates_inner ul li b { color: #586c8e; }*/
+/*#cont_updates_inner ul li { border-bottom: 10px solid #111419; }*/
