--- a/app/Resources/views/market/tienda.html.twig
+++ b/app/Resources/views/market/tienda.html.twig
@@ -5,7 +5,7 @@
         <div class="elemento_menu_tienda panel_fondo_transparente">
 
 
-                <p><a href="{{ path('carta_comprar_una', {'id': usuario.id}) }}">Adquirir carta </a></p>
+                <p><a href="{{ path('tienda_carta_comprar_una', {'id': usuario.id}) }}">Adquirir carta </a></p>
 
 
         </div>
