--- a/app/Resources/views/deck/crearMazo.html.twig
+++ b/app/Resources/views/deck/crearMazo.html.twig
@@ -12,7 +12,7 @@
        {{ form_start(form) }}
        {{ form_widget(form) }}
        <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Guardar cambios</button>
-       {% if not es_nueva %}<a href="#" class="btn btn-danger"><i class="fas fa-trash"></i> No funciona</a>{% endif %}
+       {% if not es_nueva %}<a href="{{ path('deck_eliminar', {'deck': deck.id, 'id': usuario.id}) }}" class="btn btn-danger"><i class="fas fa-trash"></i>Borr </a>{% endif %}
 
        {{ form_end(form) }}
 </div>
