Ajustando rutas/vistas InterfazUsuario v12 -Fondos ajustados -Mejorado user flow entre Colección y tienda

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -58,25 +58,33 @@
 <style>
     .body_admin {
         background: url('{{ asset('recursos/fondos/fondo_lab.jpg') }}');
-        background-size: cover;
+        /*background-size: cover;*/
+        background-size: 300vh;
+        background-position: center;
+
     }
     .body_jugador{
         background: url('{{ asset('recursos/fondos/foto_cp1.jpg') }}');
-        background-size: cover;
+        /*background-size: cover;*/
+        background-size: 300vh;
+        background-position: center;
+
 
     }
     .body_invitado{
         background: url('{{ asset('recursos/fondos/fondo_login3.jpg') }}');
-        background-size: cover;
+        background-size: 300vh;
+        background-position: center;
     }
     .body_tienda{
         background: url('{{ asset('recursos/fondos/fondo_tienda2.jpg') }}');
-        background-size: cover;
+        background-size: 220vh;
         background-repeat: no-repeat;
     }
     .body_coleccion{
         background: url('{{ asset('recursos/fondos/fondo_tienda.jpg') }}');
-        background-size: cover;
+        background-size: 300vh;
+        background-position: center;
 
     }
 </style>
