--- a/app/Resources/views/market/tienda.html.twig
+++ b/app/Resources/views/market/tienda.html.twig
@@ -3,6 +3,7 @@
 {% block content %}
 
     <div id="menu_tienda">
+        <h1>Mercado Negro  <a href="{{ path('cartas_lista_user',{'id':usuario.id}) }}">Volver a la colección</a></h1>
         <div class="elemento_menu_tienda panel_fondo_transparente">
 
                 <p>10 $</p>
