--- a/app/Resources/views/user/list.html.twig
+++ b/app/Resources/views/user/list.html.twig
@@ -6,10 +6,10 @@
         <thead>
         <tr>
             <th class="letra_listas_cabecera">NickName</th>
-            <th class="letra_listas_cabecera"><i class="fas fa-yen-sign -yen-sign"></i> Créditos</th>
+            <th class="letra_listas_cabecera"><i class="fas fa-dollar-sign"></i> Créditos</th>
             <th class="letra_listas_cabecera"><i class="fas -crown fa-crown"></i> Rep.</th>
             {% if is_granted('ROLE_ADMIN') %}
-            <th class="letra_listas_cabecera"><i class="fas fa-yen-sign -yen-sign"></i>¿Es admin?</th>
+            <th class="letra_listas_cabecera"><i class="fas fa-microchip"></i>¿Es admin?</th>
             {% endif %}
         </tr>
         </thead>
