--- a/app/Resources/views/user/InterfazUsuario.html.twig
+++ b/app/Resources/views/user/InterfazUsuario.html.twig
@@ -8,7 +8,7 @@
             <a href="{{ path('cartas_lista_user',{'id':usuario.id}) }}">Coleccion</a>
        </div>
        <div id="div_coleccion" class="menu_jugador_opcion panel_fondo_transparente">
-            <a href="#">Jugar</a>
+            <a href="{{ path('game_prepara', {'id':usuario.id}) }}">Jugar</a>
        </div>
        <div id="div_tienda" class="menu_jugador_opcion panel_fondo_transparente">
             <a href="{{ path('tienda', {'id': usuario.id}) }}">Tienda</a>
