Implementando juego v0.2 -Creada batalla con oponente random + 4 cartas random -[bug]: Si se recarga la página se encuentra otro combate con otro usuario -[ERROR]: Si se pulsa validar, explota

--- a/app/Resources/views/typeCard/list2.html.twig
+++ b/app/Resources/views/typeCard/list2.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.html.twig' %}
 {% block contenidoExt %}
-<div
+<div>
     {% if usuario %}
 
     <h1>Coleccion de {{ usuario.nickname }}</h1>
